[tool.poetry]
name = "applied-predictive-modeling"
version = "0.1.0"
description = ""
authors = ["Gustavo Argote <gusmann@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "applied_predictive_modeling"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
jupyter-book = "^0.15.1"
flake8 = "^6.0.0"
pytest = "^7.2.2"
# docutils = "^0.17.1"
marko = "^1.3.0"
ghp-import = "^2.1.0"
sphinx-inline-tabs = "^2022.1.2b11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
